--- a/src/app/swymed-user-mapping/swymed-user-mapping.component.html
+++ b/src/app/swymed-user-mapping/swymed-user-mapping.component.html
@@ -33,8 +33,8 @@
             <td>{{filteredswymedUserDetails.indexOf(item)+1}}</td>
             <td>{{item.userName}}</td>
             <td>{{item.designationName}}</td>
-            <td>{{item.swymedEmailID}}</td>
-            <td>{{item.swymedDomain}}</td>
+            <td>{{item.videoConsultationEmailID}}</td>
+            <td>{{item.videoConsultationDomain}}</td>
             <td>
               <md-icon mdTooltip="Edit" class="mat-icon material-icons" role="img" aria-hidden="true" style="cursor:pointer" *ngIf="!item.Deleted && !item.userDeleted"
                 (click)="editUserDetails(item)">edit</md-icon>
@@ -100,7 +100,7 @@
     </div>
     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 m-t-15">
       <md-select placeholder="Swymed Domain" class="width100" [(ngModel)]="domain" name="domain" [disabled]="disableSelection"
-        #swymedDomain="ngModel" required>
+        #videoConsultationDomain="ngModel" required>
         <md-option *ngFor="let item of domainList" [value]="item">
           {{item.swymedDoamin}}
         </md-option>
