--- a/src/app/van-master/van-master.component.html
+++ b/src/app/van-master/van-master.component.html
@@ -232,12 +232,12 @@
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 m-t-15" PAN>
                         <md-input-container [style.width]="'100%'">
-                            <input mdInput placeholder="Swymed ID" [(ngModel)]="sID" name="sID" #swymedId="ngModel">
+                            <input mdInput placeholder="Swymed ID" [(ngModel)]="sID" name="sID" #videoConsultationID="ngModel">
                         </md-input-container>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 m-t-15">
                         <md-input-container [style.width]="'100%'">
-                            <input mdInput placeholder="Swymed Email" [(ngModel)]="sEmail" name="sEmail" #swymedemail="ngModel">
+                            <input mdInput placeholder="Swymed Email" [(ngModel)]="sEmail" name="sEmail" #videoConsultationEmail="ngModel">
                         </md-input-container>
                         <label class="maxRedialNote">{{note}}</label>
                     </div>
