references changed for fetosense

--- a/src/app/fetosense-test-master/fetosense-test-master.component.html
+++ b/src/app/fetosense-test-master/fetosense-test-master.component.html
@@ -62,8 +62,8 @@
               (click)="editTest(test)">edit</md-icon>
           </td>
           <td>
-            <button  md-raised-button color="accent" *ngIf="test.deleted" (click)="deleteTest(test.fetosenseTestID, false)">Activate</button>
-            <button  md-raised-button color="primary" *ngIf="!test.deleted" (click)="deleteTest(test.fetosenseTestID, true)">Deactivate</button>
+            <button  md-raised-button color="accent" *ngIf="test.deleted" (click)="deleteTest(test.foetalMonitorTestID, false)">Activate</button>
+            <button  md-raised-button color="primary" *ngIf="!test.deleted" (click)="deleteTest(test.foetalMonitorTestID, true)">Deactivate</button>
           </td>
         </tr>
       </tbody>
