--- a/src/app/swymed-user-mapping/swymed-user-mapping.component.html
+++ b/src/app/swymed-user-mapping/swymed-user-mapping.component.html
@@ -102,7 +102,7 @@
       <md-select placeholder="Swymed Domain" class="width100" [(ngModel)]="domain" name="domain" [disabled]="disableSelection"
         #videoConsultationDomain="ngModel" required>
         <md-option *ngFor="let item of domainList" [value]="item">
-          {{item.swymedDoamin}}
+          {{item.videoConsultationDoamin}}
         </md-option>
       </md-select>
     </div>
