--- a/src/app/provider-admin/provider-admin.component.html
+++ b/src/app/provider-admin/provider-admin.component.html
@@ -40,6 +40,10 @@
                                 <li style="cursor: pointer" (click)='show("4")'>
                                     <a>Call Disposition Type Master</a>
                                 </li>
+                                <li style="cursor: pointer" (click)='show("77")'>
+                                    <a>Serviceline State CDSS Mapping</a>
+                                </li>
+
                                 <li style="cursor: pointer" (click)='show("5")'>
                                     <a>Category Subcategory Provisioning</a>
                                 </li>
@@ -297,6 +301,7 @@
                             <app-location-serviceline-mapping *ngSwitchCase="1"></app-location-serviceline-mapping>
                             <app-provider-admin-role-master *ngSwitchCase="2"></app-provider-admin-role-master>
                             <app-call-disposition-type-master *ngSwitchCase="4"></app-call-disposition-type-master>
+                            <app-serviceline-cdss-mapping *ngSwitchCase="77"></app-serviceline-cdss-mapping>
                             <app-category-subcategory-provisioning *ngSwitchCase="5"></app-category-subcategory-provisioning>
                             <app-drug-master *ngSwitchCase="6"></app-drug-master>
                             <app-severity-type *ngSwitchCase="12"></app-severity-type>
