--- a/src/app/serviceline-cdss-mapping/servicelineCdssMapping.component.html
+++ b/src/app/serviceline-cdss-mapping/servicelineCdssMapping.component.html
@@ -7,7 +7,7 @@
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 m-t-15">
             <md-select placeholder="Serviceline"  (change)="getStates(service)" class="width100" [(ngModel)]="service"
             name="service" required>
-            <md-option *ngFor="let item of services" [value]="item">
+            <md-option *ngFor="let item of services" [value]="item.serviceID">
               {{item.serviceName}}
             </md-option>
           </md-select>
